--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "homepage": "https://github.com/tomasperezv/node-api-client#readme",
   "dependencies": {
-    "ntwitter": "^0.5.0"
+    "twitter": "^1.2.5"
   }
 }
