--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-api-client",
   "version": "1.0.0",
   "description": "Node.js implementation of clients for public API",
-  "main": "api-client.js",
+  "main": "./lib/api-client.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tomasperezv/node-api-client.git"
@@ -12,8 +12,16 @@
   "bugs": {
     "url": "https://github.com/tomasperezv/node-api-client/issues"
   },
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
   "homepage": "https://github.com/tomasperezv/node-api-client#readme",
   "dependencies": {
+    "expect.js": "^0.3.1",
+    "mocha": "^2.3.3",
     "twitter": "^1.2.5"
   }
 }
